Various build cleanups